Adjust for Sametime accounts getting a "usersplit" in libpurple 2.10.1

Previously, Sametime accounts had separate 'account' and 'server'
parameters. Upgrading to libpurple 2.10.1 caused them to have
a single 'account' parameter with syntax like "username:server",
flagged as being split at ":" - to keep existing accounts working,
we want to separate them again, like we do for IRC.

Bug: https://bugs.freedesktop.org/show_bug.cgi?id=44631
Tested-by: Simone Caronni
Signed-off-by: Simon McVittie <simon.mcvittie@collabora.co.uk>